[package]
name = "li_logger"
version = "0.2.0"
description = "A self-use super-simple logging library."
edition = "2024"
authors = ["Falsw <Falsestar114514@outlook.com>"]
repository = "https://github.com/Falsw-star/li_logger"
license = "MIT"

[features]
async = [
    "tokio",
]
middleware = [
    "async",
    "tower",
    "http",
    "pin-project",
]

[dependencies]
chrono = "0.4.44"
colored = "3.1.1"
crossbeam = { version = "0.8.4" }
http = { version = "1.4.0", optional = true }
lazy_static = "1.5.0"
pin-project = { version = "1.1.11", optional = true }
tokio = { version = "1.50.0", features = ["rt"], optional = true }
tower = { version = "0.5.3", optional = true }
